# detector-applet

src/main/cpp/web-cam-detector/: CMakeLists.txt  jwebcamdetector.cpp  main.cpp  nkdhny_runtag_WebcamDetector.h  webcamdetector.cpp  webcamdetector.h
src/main/java/nkdhny/runtag/: Tag.java  WebcamDetector.java
src/main/resources/: runtagdetector_applet.jnlp
src/main/scala/nkdhny/runtag/: detector.scala
src/test/java/nkdhny/runtag/: WebcamDetectorSample.java
